--- a/os/Makefile
+++ b/os/Makefile
@@ -1,8 +1,9 @@
 # Building
 TARGET := riscv64gc-unknown-none-elf
-MODE := release
-KERNEL_ELF := target/$(TARGET)/$(MODE)/os
-KERNEL_BIN := $(KERNEL_ELF).bin
+MODE := debug
+NAME := YooOs
+
+KERNEL_ELF := target/$(TARGET)/$(MODE)/$(NAME)
 DISASM_TMP := target/$(TARGET)/$(MODE)/asm
 
 # Building mode argument
@@ -25,15 +26,15 @@ OBJCOPY := rust-objcopy --binary-architecture=riscv64
 # Disassembly
 DISASM ?= -x
 
+QEMU := qemu-system-riscv64
 QEMU_ARGS := -machine virt \
 			 -nographic \
 			 -bios $(BOOTLOADER) \
-			 -device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA)
+			 -kernel $(KERNEL_ELF)
 
-QEMU_NAME := qemu-system-riscv64
+GDB := riscv64-unknown-elf-gdb
 
-
-build: env $(KERNEL_BIN)
+build: env 
 
 env:
 	(rustup target list | grep "riscv64gc-unknown-none-elf (installed)") || rustup target add $(TARGET)
@@ -41,8 +42,6 @@ env:
 	rustup component add rust-src
 	rustup component add llvm-tools-preview
 
-$(KERNEL_BIN): kernel
-	@$(OBJCOPY) $(KERNEL_ELF) --strip-all -O binary $@
 
 kernel:
 	@echo Platform: $(BOARD)
@@ -64,22 +63,19 @@ disasm-vim: kernel
 run: run-inner
 
 
-qemu-version-check:
-	@sh scripts/qemu-ver-check.sh $(QEMU_NAME)
-
 run-inner: qemu-version-check build
-	@qemu-system-riscv64 $(QEMU_ARGS)
+	@$(QEMU) $(QEMU_ARGS)
 
 debug: qemu-version-check build
 	@tmux new-session -d \
-		"qemu-system-riscv64 $(QEMU_ARGS) -s -S" && \
-		tmux split-window -h "riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'" && \
+		"$(QEMU) $(QEMU_ARGS) -s -S" && \
+		tmux split-window -h "$(GDB) -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'" && \
 		tmux -2 attach-session -d
 
 gdbserver: qemu-version-check build
-	@qemu-system-riscv64 $(QEMU_ARGS) -s -S
+	@$(QEMU) $(QEMU_ARGS) -s -S
 
 gdbclient:
-	@riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'
+	@$(GDB) -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'
 
 .PHONY: build env kernel clean disasm disasm-vim run-inner gdbserver gdbclient qemu-version-check
