--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -10,6 +10,8 @@ sbi-rt = { version = "0.0.2", features = ["legacy"] }
 riscv = { git = "https://github.com/Dr-TSNG/riscv" }
 buddy_system_allocator = "0.11.0"
 spin = '0.9.8'
+async-task = { version = "4.7", default-features = false }
+crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
 
 [profile.release]
 debug = true
