--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -12,6 +12,7 @@ buddy_system_allocator = "0.11.0"
 spin = '0.9.8'
 async-task = { version = "4.7", default-features = false }
 crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
+bitflags = "2.6.0"
 
 [profile.release]
 debug = true
